add_executable(VirtualTrunk VirtualTrunk.cpp)
install(TARGETS VirtualTrunk DESTINATION bin)

add_executable(StdFunction StdFunction.cpp)
install(TARGETS StdFunction DESTINATION bin)

add_executable(StdBind StdBind.cpp)
install(TARGETS StdBind DESTINATION bin)

add_executable(StdCref StdCref.cpp)
install(TARGETS StdCref DESTINATION bin)
