add_executable(1config 1config.cpp)
add_executable(1config3 1config3.cpp)
add_executable(1config5 1config5.cpp)
add_executable(1config_temporary_object 1config_temporary_object.cpp)
add_executable(1oconfig_iclass_init 1config_inclass_init.cpp)
add_executable(1config_opeartor_overloading 1config_operator_overloading.cpp)
add_executable(1qsort 1qsort.cpp)
add_executable(1functor 1functor.cpp)
add_executable(2jjalloc 2jjalloc.cpp)
add_executable(3find 3find.cpp)
# add_executable(lconfig6 lconfig6.cpp)
