add_executable(Tracetst Tracetst.cpp)
add_executable(StringStorage StringStorage.cpp ../TestSuite/Test.cpp)
add_executable(SmallString SmallString.cpp)
add_executable(SmallString2 SmallString2.cpp)
add_executable(StringIterators StringIterators.cpp)
add_executable(UhOh UhOh.cpp)
add_executable(StrSize StrSize.cpp)
add_executable(StringReplace StringReplace.cpp)
add_executable(Replace Replace.cpp)
add_executable(ReplaceAndGrow ReplaceAndGrow.cpp)
add_executable(ReplaceAllTest ReplaceAllTest.cpp ReplaceAll.cpp)
add_executable(StringCharReplace StringCharReplace.cpp)
add_executable(AddStrings AddStrings.cpp)
add_executable(Sieve Sieve.cpp ../TestSuite/Test.cpp)
add_executable(Find Find.cpp ../TestSuite/Test.cpp)
add_executable(Rparse Rparse.cpp ../TestSuite/Test.cpp)
add_executable(TrimTestMain TrimTestMain.cpp TrimTest.cpp ../TestSuite/Test.cpp)
add_executable(HTMLStripper HTMLStripper.cpp replaceAll.cpp)
add_executable(CompStr CompStr.cpp ../TestSuite/Test.cpp)
add_executable(Equivalence Equivalence.cpp)
add_executable(Compare Compare.cpp)
add_executable(Compare2 Compare2.cpp)
add_executable(StringIndexing StringIndexing.cpp)
add_executable(BadStringIndexing BadStringIndexing.cpp)
add_executable(ICompare ICompare.cpp)
add_executable(IWCompare IWCompare.cpp)
