add_executable(Strfile Strfile.cpp)
add_executable(Stype Stype.cpp)
add_executable(Sbufget Sbufget.cpp)
add_executable(Seeking Seeking.cpp)
add_executable(Iofile Iofile.cpp)
add_executable(Istring Istring.cpp)
add_executable(DateIOTest DateIOTest.cpp ../C02/Date.cpp)
add_executable(Ostring Ostring.cpp)
add_executable(StringSeeking StringSeeking.cpp)
