add_executable(UrandTest UrandTest.cpp)
add_executable(FuncDef FuncDef.cpp)
add_executable(TempTemp TempTemp.cpp)
add_executable(TempTemp2 TempTemp2.cpp)
add_executable(TempTemp3 TempTemp3.cpp)
add_executable(TempTemp4 TempTemp4.cpp)
add_executable(TypenamedID TypenamedID.cpp)
add_executable(PrintSeq PrintSeq.cpp)
add_executable(DotTemplate DotTemplate.cpp)
