add_executable(CopyInts CopyInts.cpp)
add_executable(CopyStrings CopyStrings.cpp)
add_executable(CopyVector CopyVector.cpp)
add_executable(InsertVector InsertVector.cpp)
add_executable(CopyInt2 CopyInt2.cpp)
add_executable(CopyString2 CopyString2.cpp)
add_executable(ReplaceStrings ReplaceStrings.cpp)
add_executable(CopyInt3 CopyInt3.cpp)
add_executable(GreaterThanN GreaterThanN.cpp)
add_executable(CopyIntsToFile CopyIntsToFile.cpp)
add_executable(CopyIntsFromFile CopyIntsFromFile.cpp)
add_executable(CopyInts4 CopyInts4.cpp)
add_executable(CountNotEqual CountNotEqual.cpp)
add_executable(PtrFunc1 PtrFunc1.cpp)
