add_executable(Hello Hello.cpp)
add_executable(Stream2 Stream2.cpp)
add_executable(Concat Concat.cpp)
add_executable(Numconv Numconv.cpp)
add_executable(CallHello CallHello.cpp)
add_executable(HelloStrings HelloStrings.cpp)
add_executable(Scopy Scopy.cpp)
add_executable(FillString FillString.cpp)
add_executable(FillVector FillVector.cpp)
add_executable(GetWords GetWords.cpp)
add_executable(IntVector IntVector.cpp)
