add_executable(Basic Basic.cpp)
add_executable(Return Return.cpp)
add_executable(Ifthen Ifthen.cpp)
add_executable(Guess Guess.cpp)
add_executable(Guess2 Guess2.cpp)
add_executable(Charlist Charlist.cpp)
add_executable(Menu Menu.cpp)
add_executable(Menu2 Menu2.cpp)
add_executable(GotoKeyword GotoKeyword.cpp)
add_executable(CatsInHats CatsInHats.cpp)
add_executable(AutoIncrement AutoIncrement.cpp)
