add_executable(Instrument2 Instrument2.cpp)
add_executable(Instrument3 Instrument3.cpp)
add_executable(Instrument4 Instrument4.cpp)
add_executable(Sizes Sizes.cpp)
add_executable(Early Early.cpp)
add_executable(Instrument5 Instrument5.cpp)
add_executable(PureVirtualDefinitions PureVirtualDefinitions.cpp)
add_executable(AddingVirtuals AddingVirtuals.cpp)
add_executable(ObjectSlicing ObjectSlicing.cpp)
add_executable(NameHiding2 NameHiding2.cpp)
add_executable(VariantReturn VariantReturn.cpp)
add_executable(VirtualDestructors VirtualDestructors.cpp)
add_executable(UnAbstract UnAbstract.cpp)
add_executable(PureVirtualDestructors PureVirtualDestructors.cpp)
add_executable(VirtualsInDestructors VirtualsInDestructors.cpp)
add_executable(OStackTest OStackTest.cpp)
add_executable(OperatorPolymorphism OperatorPolymorphism.cpp)
add_executable(DynamicCast DynamicCast.cpp)
add_executable(StaticHierarchyNavigation StaticHierarchyNavigation.cpp)
